# data-quality

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
doc/: references.bib
doc/assets/: annexe.typ
doc/fr/: paper.typ  research_report.typ
src/: example.py  integrite_test.py  main.py  neo4j_driver.py  neo4j_load.py  test.py  test_benchmark.py  test_soda.py  utils.py
src/benchmark/: README.md  data_chaos_monkey.py  relational.py  soda.py  yago.sh  yago_data_sampler.py
src/benchmark/postgresql/: meta_data.sql
src/driver/: neo4j.py  neo4j_driver.py  postgres.py  utils.py
src/load/: enums.py  neo4j.py  utils.py
src/models/: enums.py  types.py  utils.py
src/profiling/: completeness.py  enums.py  integrity.py  labeling.py  labeling_sage.py  lisibility.py  outlier.py  types.py  utils.py  validity.py
src/quality/: completeness.py  consistency.py  enums.py  evaluate.py  integrity.py  label.py  label_sage.py  labeling.py  lisibility.py  outlier.py  schema.py  types.py  uniqueness.py  utils.py  validity.py
src/scoring/: completeness.py  integrity.py  lisibility.py  outlier.py  schema.py  utils.py  validity.py
src/tests/: completeness.py  consistency.py  integrite.py  integrity.py  label.py  label_sage.py  labeling.py  labeling_sage.py  lisibility.py  outliers.py  schema.py  uniqueness.py  validity.py
src/ui/: components.py  enums.py  layout.py  utils.py
src/ui/components/: analysis.py  dynamic.py  static.py
src/ui/pages/: completeness.py  consistency.py  home.py  integrity.py  labeling.py  lisibility.py  (+5 more)
src/utils/: utils.py
(+15 files in other folders)
