[project]
name = "ter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "neo4j>=6.1.0",
    "numpy>=2.4.2",
    "psycopg2>=2.9.11",
    "pyyaml>=6.0.3",
    "soda-postgres>=4.1.0",
    "streamlit==1.54.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
]

[tool.ruff.lint]
select=["ALL"]
ignore=["D"]
fixable=["ALL"]
